lang/src/ast2/snapshots/rain_lang__ast2__test__fn_call.snap
---
source: lang/src/ast2/test.rs
expression: "parse_display_script(\"\n        let val = foo(3)\n        let val = foo(bar(4))\n        \")"
---
ModuleRoot(
 LetDeclare(
  val
  FnCall(
   Ident(
    foo
   )
   IntegerLiteral(
    3
   )
  )
 )
 LetDeclare(
  val
  FnCall(
   Ident(
    foo
   )
   FnCall(
    Ident(
     bar
    )
    IntegerLiteral(
     4
    )
   )
  )
 )
)
