lang/src/ast2/snapshots/rain_lang__ast2__test__let_declare.snap
---
source: lang/src/ast2/test.rs
expression: "parse_display_script(\"\n        let a = 4\n        let asjldf = \\\"asjldf\\\"\n        \")"
---
ModuleRoot(
 LetDeclare(
  a
  IntegerLiteral(
   4
  )
 )
 LetDeclare(
  asjldf
  StringLiteral(
   "asjldf"
  )
 )
)
